Fix vertical alignment of c-password-toggle

--- a/src/styles/components/form/form.css
+++ b/src/styles/components/form/form.css
@@ -104,11 +104,13 @@
 }
 
 .c-password-toggle {
+  align-items: center;
+  bottom: 0;
   cursor: pointer;
+  display: flex;
   position: absolute;
   right: var(--space-2);
-  top: 50%;
-  transform: translateY(-50%);
+  top: 0;
 
   &:focus-visible {
     border-radius: var(--radius-xs);
